--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,5 +45,9 @@ std = [
 	"pallet-authorship/std",
 	"pallet-session/std",
 ]
-runtime-benchmarks = [ "frame-benchmarking" ]
+runtime-benchmarks = [
+	"frame-benchmarking",
+	"sp-runtime/runtime-benchmarks",
+	"frame-system/runtime-benchmarks", 
+]
 try-runtime = [ "frame-support/try-runtime" ]
